--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/forms": "^8.0.2",
     "@angular/http": "^8.0.0-beta.10",
     "@angular/material": "^8.1.1",
+    "@angular/material-moment-adapter": "^8.1.1",
     "@angular/platform-browser": "^8.0.2",
     "@angular/platform-browser-dynamic": "^8.0.2",
     "@angular/router": "^8.0.2",
